fixed white space on background adjustments

--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+html {
+    height: 100%;
+}
 body  {
 	background-image: url("/images/food3.jpg");
 	background-repeat: no-repeat;
@@ -5,6 +8,7 @@ body  {
 }
 
 .jumbotron {
+
     margin: 0 auto;
 	text-align: center;
     border-radius: 25px;
